--- a/Demoproject/package.json
+++ b/Demoproject/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18.1",
+        "axios": "^0.16.2",
         "babel-preset-react": "^6.23.0",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.0.1",
@@ -21,11 +21,13 @@
         "react-dom": "^16.12.0"
     },
     "dependencies": {
+        "history": "^4.10.1",
         "react-file-reader": "^1.1.4",
         "react-js-pagination": "^3.0.2",
         "react-laravel-paginator": "^0.1.6",
         "react-laravel-paginex": "^2.0.6",
         "react-router": "^3.2.5",
-        "react-router-dom": "^5.1.2"
+        "react-router-dom": "^5.1.2",
+        "react-simple-image-slider": "^1.0.2"
     }
 }
